# hackode

./: LICENSE  README-zh.md  README.md  enckode.1.in  enckode.bash  meson.build
assets/: Makefile  hackode.dict
debian/: changelog  control  copyright  hackode.install  libhackode-dev.install  libhackode0.install
po/: POTFILES  de.po  eo.po  fr.po  hackode.pot  it.po  ja.po  ko.po  meson.build  new-cli-translations.tsv  th.po  vi.po  zh_CN.po  zh_TW.po
src/: bulk.hpp
src/hackode/: dict.c  dict.h  dict_tool.c  enckode.c  err.h  imath.c  imath.h  lib.c  lib.h  str.c  str.h  util.c  util.h
subprojects/chatapp/: README-zh.md  README.md  chat_client.c  chat_server.c  meson.build
tests/: enckode_test.c  hc_cipher_unit.c  meson.build
